$Id: NEWS,v 1.798 2006-12-19 01:29:59 castaglia Exp $

-----------------------------------------------------------------------------
  More details on the bugs listed below can be found by using the bug number
  indicated in the following URL:

    http://bugs.proftpd.org/show_bug.cgi?id=N

  where `N' is the bug number.
-----------------------------------------------------------------------------

CVS
--------------------------------
- Bug 2856 - Support for RADIUS NAS-Identifier attribute.
- Bug 2849 - Error msg "Not owner" returned by "SIZE in ASCII mode" is
  misleading.
- Bug 2857 - Failure to properly unregister event handlers leads to segfault
  after restarts.

1.3.1rc1 - Released 12-Dec-2006
--------------------------------
- Bug 2766 - Support for automatic stack trace if SIGSEGV is received.
- Bug 2714 - mod_auth_file munges AuthUserFile, AuthGroupFile records.
- Bug 2721 - mod_auth_unix does not behave properly when first in AuthOrder.
- Bug 2535 - Compare directives using integer comparisons when possible to
  improve performance.
- Bug 2753 - CCC not closing SSL/TLS connection correctly.
- Bug 2654 - FEAT command should be subject to <Limit>.
- Bug 2740 - TYPE command not allowed before USER/PASS, causes problem for
  `ftp -n'.
- Bug 2777 - ProFTPD does handle data sockets properly on FreeBSD 6.
- Bug 2664 - Add 'delay info' ftpdctl action for showing DelayTable values.
  This patch also added a 'delay reset' ftpdctl action, for clearing the
  DelayTable.
- Bug 2769 - mod_auth_pam needs a patch to allow pam_group to work.
- Bug 2599 - Support for using OpenSSL "engines".
- Bug 2611 - CreateHome should allow non-root-owned parent directories.
- Bug 2686 - Allow CCC command but still require SSL/TLS protection during
  authentication.
- Bug 2628 - SQLHomedirOnDemand should be deprecated.  The CreateHome
  directive should be used instead.
- Bug 2627 - Support for RADIUS quotatab module.  The mod_quotatab_radius