@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.798 2006-12-19 01:29:59 castaglia Exp $
+$Id: NEWS,v 1.799 2006-12-22 18:48:46 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -16,6 +16,7 @@ CVS
   misleading.
 - Bug 2857 - Failure to properly unregister event handlers leads to segfault
   after restarts.
+- Bug 2869 - mod_sql botches WHERE clauses.
 
 1.3.1rc1 - Released 12-Dec-2006
 --------------------------------
